# chameleon-renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindOptiX.cmake  configure_cuda.cmake  configure_glut.cmake  nvcuda_compile_ptx.cmake  shaders.cmake
examples/: CMakeLists.txt  oldexamples.cpp
examples/create_material_model/: CMakeLists.txt  main.cpp
examples/render_normals/: CMakeLists.txt  main.cpp
examples/render_normals/shaders/: any_hit.cu  closest_hit.cu  miss.cu  raygen.cu
examples/triangle_mat/: CMakeLists.txt  main.cpp
examples/validate_barytex/: CMakeLists.txt  main.cpp
examples/validate_charruco/: CMakeLists.txt  main.cpp
examples/validate_charruco/shaders/: any_hit.cu  closest_hit.cu  miss.cu  raygen.cu
examples/validate_colmap/: CMakeLists.txt  main.cpp
examples/validate_colmap/cameras/: cameras.json
examples/validate_colmap/shaders/: closest_hit.cu  raygen.cu
examples/validate_renderer/: CMakeLists.txt  main.cpp
examples/validate_renderer/cameras/: calib1.json
examples/validate_renderer/shaders/: closest_hit.cu  raygen.cu
examples/validate_show/: CMakeLists.txt  main.cpp
examples/validate_solver/: CMakeLists.txt  main.cpp
include/chameleon_renderer/HW/: HWSetup.hpp  LedRadialCharacteristic.hpp
include/chameleon_renderer/cuda/: CUDAArray.h  CUDABuffer.h  CUDABuffer.hpp  CUDACamera.h  CUDAImage.h  CUDALight.h  CudaCamera.h  CudaLight.h  LaunchParams.h  RayType.h  TriangleMeshSBTData.h
include/chameleon_renderer/cuda/launch_params/: BarytexLaunchParams.h  PhotometryLaunchParams.h
include/chameleon_renderer/materials/: MaterialLookupTable.hpp
include/chameleon_renderer/materials/barytex/: BRDFMeasurement.hpp  CUDAGenericMaterial.hpp  CUDAMaterial.hpp  CUDAMaterialLookupForest.hpp  CUDAMaterialLookupTree.hpp  GeneralMeasurement.hpp  GenericMaterial.hpp  MaterialDataType.hpp  MaterialLookupForest.hpp  MaterialModel.hpp  MaterialModelSolver.hpp  MaterialModelSolverGS.hpp  MaterialTree.hpp  MeasurementData.hpp  MeasurementHit.hpp  MeasurementLookupTree.hpp  MeasurementTree.hpp  io.hpp  viz.hpp
include/chameleon_renderer/materials/merl/: MerlLookupTable.cuh  MerlLookupTable.hpp
include/chameleon_renderer/optix/: OptixContext.hpp  OptixModules.hpp  OptixPrograms.hpp  OptixScene.hpp
include/chameleon_renderer/renderer/: PhotometryLaunchParamProvider.cuh  PhotometryRenderer.hpp  RenderLayers.hpp  Renderer.hpp
include/chameleon_renderer/renderer/barytex/: BarytexLaunchParamProvider copy.cuh  BarytexLaunchParamProvider.cuh  BarytexLearnRenderer.hpp  BarytexObservation.hpp  BarytexShowLaunchParamProvider.cuh  BarytexShowRenderer.hpp  CUDABarytexObservation.cuh
include/chameleon_renderer/scene/: Camera.hpp  Light.hpp  Model.hpp  PhotometryCamera.hpp  PhotometryLight.hpp  Scene.hpp  SceneObject.hpp
include/chameleon_renderer/shader_utils/: PerRayData.cuh  PerRayData.h  common.cuh  common.h
include/chameleon_renderer/utils/: benchmarking.hpp  cv2gdt.hpp  cv2glm.hpp  debug_io.hpp  eigen_utils.hpp  file_utils.hpp  io.hpp  json.hpp  math_io.hpp  math_utils.hpp  optix7.h  optix7.hpp  optix_device_utils.hpp  stdutils.hpp  terminal_utils.hpp
resources/models/: monkey.mtl  pcb_new.mtl
resources/setups/chameleon/: light_index_mapping.json
resources/setups/chameleon_original/: GT-P6PRGB4303_characteristics.json  lights.json
scripts/: cameras.json  compare_result.py  import_colmap_cameras.py  lights.json  measure_ibrdf_all.sh  points_to_obj.py  switch_light_x.py  validate_render_all.sh
scripts/test_data/: cameras.txt  images.txt
scripts/test_data/coin_rgb/: cameras.json  cameras.txt  images.txt
scripts/viz/: create_overlay.py  debug_light_dirs.py  debug_optix.py  make_gif.py  radial_characteristic.py  show_cams_blend.py  viz_3d.py
src/HW/: HWSetup.cpp  LedRadialCharacteristic.cpp
src/cuda/: CUDABuffer.cpp
src/materials/: BRDFMeasurement.cpp
src/materials/barytex/: GeneralMeasurement.cpp  GenericMaterial.cpp  MaterialLookupForest.cpp  MaterialModel.cpp  MaterialTree.cpp  MeasurementData.cpp  MeasurementLookupTree.cpp  MeasurementTree.cpp  math.hpp  viz.cpp
src/materials/merl/: MerlLookupTable.cpp
src/optix/: OptixContext.cpp  OptixModules.cpp  OptixPrograms.cpp  OptixScene.cpp
src/renderer/: PhotomeryRenderer.cpp  Renderer.cpp
src/renderer/barytex/: BarytexLearnRenderer.cpp  BarytexObservation.cpp  BarytexShowRenderer.cpp  PhotomeryRenderer.cpp
src/renderer/barytex/shaders/learn/: closest_hit.cu  miss.cu  raygen.cu
src/renderer/barytex/shaders/show/: closest_hit.cu  miss.cu  raygen.cu
src/scene/: Camera.cpp  Light.cpp  Model.cpp  PhotometryCamera.cpp  Scene.cpp  SceneObject.cpp
tests/: CMakeLists.txt  test_isotropic_brdf.cpp  test_lookup_forest.cpp  test_lookup_tree.cpp  test_solver.cpp  test_triangle_mesh.cpp
